--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Browser</title>
   </head>
   <body>
-    <link rel="stylesheet" type="text/css" href="example.css" media=”screen” />
+    <link rel="stylesheet" type="text/css" href="style.css" media=”screen” />
     <h3>
       Type url or search item
     </h3>
