--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <input type="text" id="INPUT"/>
     </div>
     <div class="dropdown">
-      <button class="dropbtn">Dropdown</button>
+      <button class="dropbtn">Search with</button>
       <div class="dropdown-content">
-    <a href="https://google.com/search?q=%INPUT">google</a>
-    <a href="https://bing.com/search?q=%INPUT">Bing</a>
-    <a href="https://duckduckgo.com/search?q=%INPUT">Duck Duck Go</a>
-    <a href="https://ecosia.com/search?q=%INPUT">Ecosia</a>
-    <a href="https://oceanhero.today/search?q=%INPUT">Ocean Hero</a>
-    <a href="https://%INPUT">Url</a>
+            <a href="https://google.com/search?q=%INPUT">google</a>
+            <a href="https://bing.com/search?q=%INPUT">Bing</a>
+            <a href="https://duckduckgo.com/search?q=%INPUT">Duck Duck Go</a>
+            <a href="https://ecosia.com/search?q=%INPUT">Ecosia</a>
+            <a href="https://oceanhero.today/search?q=%INPUT">Ocean Hero</a>
+            <a href="https://%INPUT">Url</a>
       </div>
   </div>
   </body>
