--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <div class="dropdown-content">
             <a href="https://google.com/search?q=%INPUT">google</a>
             <a href="https://bing.com/search?q=%INPUT">Bing</a>
-            <a href="https://duckduckgo.com/search?q=%INPUT">Duck Duck Go</a>
-            <a href="https://ecosia.com/search?q=%INPUT">Ecosia</a>
-            <a href="https://oceanhero.today/search?q=%INPUT">Ocean Hero</a>
+            <a href="https://duckduckgo.com/?q=%INPUT&t=h_&ia=web">Duck Duck Go</a>
+            <a href="https://www.ecosia.org/search?method=index&q=%INPUT">Ecosia</a>
+            <a href="https://oceanhero.today/web?q=%INPUT">Ocean Hero</a>
             <a href="https://%INPUT">Url</a>
       </div>
   </div>
