--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       Type url or search item
     </h3>
     <div class="box">
-        <input type="text" id="INPUT"/>
+        <input type="search" class="box" placeholder="Search the web..." id="INPUT" name="q" required/>
     </div>
     <div class="dropdown">
       <button class="dropbtn">Search with</button>
       <div class="dropdown-content">
-            <a href="https://google.com/search?q=%INPUT">google</a>
-            <a href="https://bing.com/search?q=%INPUT">Bing</a>
+            <a href="https://google.com/search?q=%q">google</a>
+            <a href="https://bing.com/search?q=%q">Bing</a>
             <a href="https://duckduckgo.com/?q=%INPUT&t=h_&ia=web">Duck Duck Go</a>
             <a href="https://www.ecosia.org/search?method=index&q=%INPUT">Ecosia</a>
             <a href="https://oceanhero.today/web?q=%INPUT">Ocean Hero</a>
