--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Browser</title>
+    <title>Ecogogo</title>
   </head>
   <body>
     <style>
@@ -60,7 +60,7 @@
     <div class="dropdown">
       <button class="dropbtn">Search with</button>
       <div class="dropdown-content">
-            <a href="https://google.com/search?q=%q">google</a>
+            <a href="https://google.com/search?q="INPUT"">google</a>
             <a href="https://bing.com/search?q=%q">Bing</a>
             <a href="https://duckduckgo.com/?q=%INPUT&t=h_&ia=web">Duck Duck Go</a>
             <a href="https://www.ecosia.org/search?method=index&q=%INPUT">Ecosia</a>
