--- a/index.html
+++ b/index.html
@@ -47,19 +47,7 @@
         }else{
           location.replace(element);
         }
-      }
-      var a = document.querySelector("#testid a");
-      a.onclick = a()
-      var b = document.querySelector("#testid1 a");
-      b.onclick = b()
-      var c = document.querySelector("#testid2 a");
-      c.onclick = c()
-      var d = document.querySelector("#testid3 a");
-      d.onclick = d()
-      var e = document.querySelector("#testid4 a");
-      e.onclick = e()
-      var f = document.querySelector("#testid5 a");
-      f.onclick = url()
+      
     </script>
     <style>
       body {
@@ -116,12 +104,12 @@
     <div class="dropdown">
       <button class="dropbtn">Search with</button>
       <div class="dropdown-content">
-            <div id="testid"><div><div><a href="#">Google</a><div><div><div>
-            <div id="testid1"><div><div><a href="#">Bing</a><div><div><div>
-            <div id="testid2"><div><div><a href="#">Duck Duck Go</a><div><div><div>
-            <div id="testid3"><div><div><a href="#">Ecosia</a><div><div><div>
-            <div id="testid4"><div><div><a href="#">Ocean Hero</a><div><div><div>
-            <div id="testid5"><div><div><a href="#">Url</a><div><div><div>
+        <a href="javascript:a()">Google</a>
+        <a href="javascript:b()">Bing</a>
+        <a href="javascript:c()">Duck Duck Go</a>
+        <a href="javascript:d()">Ecosia</a>
+        <a href="javascript:e()">Ocean Hero</a>
+        <a href="javascript:url()">Url</a>
       </div>
   </div>
   </body>
