--- a/index.html
+++ b/index.html
@@ -98,19 +98,22 @@
     <h3>
       Type url or search item
     </h3>
+    <form>
+      <input type="hidden id="ggjh" value="6034"></input>
     <div class="box">
         <input type="search" class="box" placeholder="Search the web..." id="INPUT" name="q" required/>
     </div>
     <div class="dropdown">
       <button class="dropbtn">Search with</button>
       <div class="dropdown-content">
-        <a href="javascript:a()">Google</a>
-        <a href="javascript:b()">Bing</a>
-        <a href="javascript:c()">Duck Duck Go</a>
-        <a href="javascript:d()">Ecosia</a>
-        <a href="javascript:e()">Ocean Hero</a>
-        <a href="javascript:url()">Url</a>
+        <a href="javascript:a();">Google</a>
+        <a href="javascript:b();">Bing</a>
+        <a href="javascript:c();">Duck Duck Go</a>
+        <a href="javascript:d();">Ecosia</a>
+        <a href="javascript:e();">Ocean Hero</a>
+        <a href="javascript:url();">Url</a>
       </div>
   </div>
+    </form>
   </body>
 </html>
