--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       Type url or search item
     </h3>
     <form>
-      <input type="hidden id="ggjh" value="6034"></input>
+      <input type="hidden" id="ggjh" value="6034"></input>
     <div class="box">
         <input type="search" class="box" placeholder="Search the web..." id="INPUT" name="q" required/>
     </div>
