--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </h3>
     <form>
     <div class="box">
-        <input type="search" class="box" placeholder="Search the web..." id="INPUT" name="q" required/>
+        <input type="text" class="box" placeholder="Search the web..." id="INPUT" name="q" required/>
     </div>
     <div class="dropdown">
       <button class="dropbtn">Search with</button>
