--- a/index.html
+++ b/index.html
@@ -11,41 +11,41 @@
         if (element.includes("https://")) {
           alert("use the url button for a url");
         }else{
-          window.replace("https://google.com/search?q=" + element) ;
+          location.assign("https://google.com/search?q=" + element) ;
         }
       } 
       function b() {
         if (element.includes("https://")) {
           alert("use the url button for a url");
         }else{
-          window.replace("https://bing.com/search?q=" + element) ;
+          location.assign("https://bing.com/search?q=" + element) ;
         }
       function c() {
         if (element.includes("https://")) {
           alert("use the url button for a url");
         }else{
-          window.replace("https://duckduckgo.com/?q=" + element + "&t=h_&ia=web") ;
+          location.assign("https://duckduckgo.com/?q=" + element + "&t=h_&ia=web") ;
         }
       }
       function d() {
         if (element.includes("https://")) {
           alert("use the url button for a url");
         }else{
-          window.replace("https://www.ecosia.org/search?method=index&q=" + element) ;
+          location.assign("https://www.ecosia.org/search?method=index&q=" + element) ;
         }
       }
       function e() {
         if (element.includes("https://")) {
           alert("use the url button for a url");
         }else{
-          window.replace("https://oceanhero.today/web?q=" + element) ;
+          location.assign("https://oceanhero.today/web?q=" + element) ;
         }
       }
       function url()
         if(element.includes("https://") == false) {
           alert("Hmm... the link you are trying to go to isnt a link if you are searching for something use the other buttons");
         }else{
-          window.replace(element);
+          location.assign(element);
         }
       
     </script>
